changed grid layout

--- a/app/src/main/res/layout/activity_rest.xml
+++ b/app/src/main/res/layout/activity_rest.xml
@@ -44,9 +44,11 @@
 
         <GridLayout
             android:id="@+id/grid"
-            android:rowCount="3"
+            android:rowCount="2"
             android:columnCount="2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></GridLayout>
+            android:layout_height="wrap_content">
+
+        </GridLayout>
     </ScrollView>
 </LinearLayout>
